ansible config added

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,5 @@
 inventory=./ansible_hosts
 remote_user=ubuntu
 private_key_file=~/aws/aws_keys/sree.pem
+host_key_checking=False
+retry_files_enabled=False
